--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
-    "unused-imports/no-unused-imports": "error"
+    "no-unsed-declaration": true
   }
 }
